--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,14 +7,15 @@
 .header nav{
     background-color: black;
     line-height: 40px;
-    font-size: 20px;
+    
 }
 nav a {
     text-decoration: none;
     color: white;
     margin-right: 20px;
     padding: 5px;
+    font-size: 20px;
 }
 nav a:hover{
-    background-color: gray;
+    background-color: rgb(49, 18, 187);
 }
